--- a/style/sampleSlicer.less
+++ b/style/sampleSlicer.less
@@ -58,7 +58,7 @@
 @themeTertiaryColor: #F2C811;
 @themeLightColor: #F2C811;
 @themeLighterColor: #F2C811;
-@regularFontFamily: helvetica, arial, sans-serif;
+@regularFontFamily: "Segoe UI";
 
 
     .numeric-range-slicer {
@@ -71,6 +71,9 @@
         width: 100%;
         position: relative;
         box-sizing: border-box;
+        .slicerHeader {
+            font-size: 12px;
+        }
 
         .numeric-range-slicer-head {
             padding: 5px 6px 7px 8px;
@@ -102,10 +105,11 @@
 
                     .numeric-range-slicer-input {
                         box-sizing: border-box;
-                        width: 6.16em;
+                        width: 110px;
                         height: 2.16em;
                         padding: 0 0 0 0.5em;
-                        font-size: inherit;
+                        font-family: "Segoe UI";
+                        font-size: 11px;
                         border: 1px solid @neutralLightColor;
                         background-color: transparent;
                         transition: border 250ms;
@@ -226,6 +230,8 @@
                 align-items: stretch;
                 overflow: hidden;
                 text-overflow: ellipsis;
+                font-family: "Segoe UI";
+                font-size: 11px;
             }
 
             .slicer-img-wrapper {
@@ -257,10 +263,6 @@
                 float: left;
             }
         }
-    }
-
-    .slicerItemContainer.selected {
-        background: #BDD7EE;
     }
 
     .row-horizontal {
